--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "start": "tsc -w",
-    "build": "npm run lint && npm run test && rollup --config rollup.config.js",
-    "commit": "git-cz"
+    "build": "npm run lint && npm run test && rollup --config rollup.config.js"
   },
   "husky": {
     "pre-commit": "lint-staged",
+    "post-commit": "git update-index --again",
     "commit-msg": "node verifyCommitMsg.js"
   },
   "lint-staged": {
@@ -41,11 +41,12 @@
     "@types/node": "^16.11.6",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
+    "babel-jest": "^27.3.1",
     "command": "^0.0.5",
     "commitizen": "^4.2.4",
-    "cz-conventional-changelog": "^3.3.0",
     "husky": "^7.0.4",
     "jest": "^27.3.1",
+    "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
     "rollup": "^2.58.3",
     "rollup-plugin-clear": "^2.0.7",
@@ -57,8 +58,8 @@
     "tslib": "^2.3.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "babel-jest": "^27.3.1",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "yorkie": "^2.0.0"
   },
   "dependencies": {}
 }
