--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "commit-msg": "node verifyCommitMsg.js"
   },
   "lint-staged": {
-    "src/**/*.{js,ts}": [
-      "npm run lint",
+    "src/**/*.{vue,js,jsx,ts,tsx}": [
+      "eslint --max-warnings=0 --fix",
       "git add"
     ]
   },
