--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "lighthouse",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "lib/index.js",
   "license": "MIT",
   "scripts": {
     "test": "jest",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
+    "build_test": "rollup --config rollup.config.js",
     "start": "tsc -w",
     "build": "npm run lint && npm run test && npm run format && rollup --config rollup.config.js"
   },
-  "husky": {
+  "gitHooks": {
     "pre-commit": "lint-staged",
     "post-commit": "git update-index --again",
     "commit-msg": "node verifyCommitMsg.js"
@@ -31,11 +32,8 @@
     "@commitlint/config-conventional": "^13.2.0",
     "@rollup/plugin-alias": "^3.1.8",
     "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-eslint": "^8.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.6",
-    "@rollup/plugin-replace": "^3.0.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
@@ -43,16 +41,12 @@
     "@typescript-eslint/parser": "^5.2.0",
     "babel-jest": "^27.3.1",
     "command": "^0.0.5",
-    "commitizen": "^4.2.4",
-    "husky": "^7.0.4",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
     "rollup": "^2.58.3",
     "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-filesize": "^9.1.1",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^27.0.7",
     "tslib": "^2.3.1",
